--- a/index.html
+++ b/index.html
@@ -5,23 +5,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mike Colbert</title>
-    <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="stylesheet" href="./css/stylesheet.css" />
   </head>
-  <body>
-    <header>Welcome to Mike' Page.</header>
+  <body class="wrapper">
+    <header><h1>Mike Colbert</h1></header>
     <nav>
       <a href="./resume.html"> Resume </a>
     </nav>
     <main>
-        <h1>Mike Colbert</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut aliquid ad quia dolores nam iste saepe iusto qui, esse eligendi sunt consequatur quasi laudantium nostrum aspernatur corrupti quae modi. Dignissimos.
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis nemo voluptatibus delectus nesciunt veritatis esse aliquam deserunt possimus praesentium sapiente pariatur atque tenetur commodi deleniti, provident dolorum. Beatae, temporibus quibusdam!
+      <h2>About Mike</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut aliquid ad
+        quia dolores nam iste saepe iusto qui, esse eligendi sunt consequatur
+        quasi laudantium nostrum aspernatur corrupti quae modi. Dignissimos.
+      </p>
+      <p>Students in class:</p>
+      <ol>
+        <li>Mike</li>
+        <li>Evan</li>
+        <li>Haley</li>
+      </ol>
 
-            </p>
-        </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis
+        nemo voluptatibus delectus nesciunt veritatis esse aliquam deserunt
+        possimus praesentium sapiente pariatur atque tenetur commodi deleniti,
+        provident dolorum. Beatae, temporibus quibusdam!
+      </p>
+
+      <table>
+        <thead>
+          <td>Col1</td>
+          <td>Col2</td>
+          <td>Col3</td>
+          <td>Col4</td>
+        </thead>
+
+        <tr>
+          <td>data1,1</td>
+          <td>data1,2</td>
+          <td>data1,3</td>
+          <td>data1,4</td>
+        </tr>
+        <tr>
+          <td>data2,1</td>
+          <td>data2,2</td>
+          <td>data2,3</td>
+          <td>data2,4</td>
+        </tr>
+        <tr>
+          <td>data3,1</td>
+          <td>data3,2</td>
+          <td>data3,3</td>
+          <td>data3,4</td>
+        </tr>
+        <tr>
+          <td>data4,1</td>
+          <td>data4,2</td>
+          <td>data4,3</td>
+          <td>data4,4</td>
+        </tr>
+      </table>
+      <p>&nbsp;</p>
+
+      <img src="./images/Ukraine-Russia.jpg" width="400" />
+
+      <p>&nbsp;</p>
     </main>
-    <footer>
-        &copy; Mike Colbert, 2023
-    </footer>
+    <footer>&copy; Mike Colbert, 2023</footer>
   </body>
 </html>
