--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
       </table>
       <p>&nbsp;</p>
 
+      <img
+        src="/images/Ukraine-Russia.jpg"
+        alt="Hacking groups involved in the Russia/Ukraine war"
+      />
       <p>&nbsp;</p>
     </main>
     <footer>&copy; Mike Colbert, 2023</footer>
